# openyak

./: .gitignore  ATLAS_CLOUD_PROVIDER_REVIEW.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  LINUX.md  README.md  README.zh-CN.md  SOUL.md  agent.yaml  design-qa.md  package-lock.json  package.json
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-linux.yml  ci.yml  release.yml  reusable-linux-build.yml
backend/: .env.example  README.md  README.zh-CN.md  openyak.spec  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: agent.py  permission.py  run_recovery.py  swarm.py
backend/app/api/: _route.py  automations.py  chat.py  config.py  files.py  messages.py  models.py  ollama.py  openai_compat.py  pdf.py  rapid_mlx.py  remote.py  router.py  sessions.py  skills.py  subagents.py
backend/app/auth/: middleware.py  (+2 more)
backend/tests/: conftest.py
desktop-tauri/: package.json
desktop-tauri/src-tauri/: Cargo.toml  build.linux-x64.json  tauri.conf.json
desktop-tauri/src-tauri/src/: backend.rs  commands.rs  lib.rs  main.rs  tray.rs
docs/: codex-work-mode-ux-audit-2026-07-23.md
docs/adr/: 0003-messages-are-parts.md  0007-route-module-thin-api-layer.md  0009-context-window-prompt-assembler-extraction.md  0011-ultra-agent-swarm-execution-overlay.md  0011-v2-macos-only-rapid-mlx-pivot.md
frontend/: README.md  README.zh-CN.md  next.config.ts  node_modules  package-lock.json  package.json  playwright.config.ts  playwright.unit.config.ts
scripts/: dev-desktop.mjs  verify-bundle.mjs
(+314 files in other folders)
