[package]
name = "openyak-desktop"
version = "1.1.9"
description = "OpenYak — Your local AI assistant"
license = "MIT"
edition = "2021"

[lib]
name = "openyak_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "devtools"] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
# Native window vibrancy: NSVisualEffectView so the sidebar's
# semi-transparent bg reveals a blurred wallpaper instead of the app's
# own surface color.
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
portpicker = "0.1"
log = "0.4"
env_logger = "0.11"
url = "2"
